--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-      "name": "GRAND OFFICIAL",
-      "description": "An OP Telegram UserBot.",
+      "name": "SUNEO MANAGER",
+      "description": "An OP Telegram Group manager bot.",
       "keywords": [
          "telegram",
          "anime",
