--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "SUNEO MANAGER",
+      "name": "Suneo Manager",
       "description": "An OP Telegram Group Management bot.",
       "keywords": [
          "telegram",
@@ -189,6 +189,6 @@
       "manager",
       "GRAND"
    ],
-   "name": "SUNEO MANAGER",
+   "name": "Suneo Manager",
    "repository": "https://github.com/deepanshu143/Suneo"
 }
