--- a/app.json
+++ b/app.json
@@ -189,6 +189,7 @@
       "manager",
       "GRAND"
    ],
+   "logo": "https://telegra.ph/file/2204c8b75990a2d36ea2a.jpg",
    "name": "Suneo Manager",
    "repository": "https://github.com/deepanshu143/Suneo"
 }
