--- a/app.json
+++ b/app.json
@@ -168,7 +168,7 @@
       },
       "AI_API_KEY": {
       "description": "Make your bot talk using Intellivoid's chatbot API, get your key from https://coffeehouse.intellivoid.net/",
-         "required": true,
+         "required": false,
          "value": "x_y_z"
    },      
       "BAN_STICKER": {
